# ChangeLog for sys-auth/pambase
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.79 2010/03/10 00:37:55 flameeyes Exp $

*pambase-20100310 (10 Mar 2010)

  10 Mar 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -pambase-20081028.ebuild, +pambase-20100310.ebuild:
  Version bump and remove old version. The new version simply improves on
  the system-services stack to be usable with fcron.

  21 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  pambase-20090620.1-r1.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #284088

  09 Oct 2009; Markus Meier <maekke@gentoo.org>
  pambase-20090620.1-r1.ebuild:
  arm stable, bug #284088

  27 Sep 2009; nixnut <nixnut@gentoo.org> pambase-20090620.1-r1.ebuild:
  ppc stable #284088

  26 Sep 2009; Romain Perier <mrpouet@gentoo.org>
  pambase-20090620.1-r1.ebuild:
  Stable for amd64 per bug #284088.

  22 Sep 2009; Jeroen Roovers <jer@gentoo.org> pambase-20090620.1-r1.ebuild:
  Stable for HPPA (bug #284088).

  16 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  pambase-20090620.1-r1.ebuild:
  stable x86, bug 284088

  14 Sep 2009; Tom Gall <tgall@gentoo.org> pambase-20090620.1-r1.ebuild:
  stable on ppc64, bug #284088

  08 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -pambase-20090515.ebuild:
  Remove old version.

*pambase-20090620.1-r1 (10 Aug 2009)

  10 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -pambase-20090620.1.ebuild, +pambase-20090620.1-r1.ebuild:
  Revision bump to add the portage-utils dependency (without this, Linux-PAM
  version is not properly calculated, and tally2 is not used).

*pambase-20090620.1 (20 Jun 2009)

  20 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -pambase-20090620.ebuild, +pambase-20090620.1.ebuild:
  Further pam_tally2 fixes.

*pambase-20090620 (20 Jun 2009)

  20 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +pambase-20090620.ebuild: