@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/Attic/pambase-20100310.ebuild,v 1.1 2010/03/10 00:37:55 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/Attic/pambase-20100310.ebuild,v 1.2 2010/03/18 16:33:52 fauli Exp $
 
 EAPI=2
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.flameeyes.eu/gentoo-distfiles/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~sparc-fbsd ~x86-fbsd"
 IUSE="debug cracklib passwdqc consolekit gnome-keyring selinux mktemp ssh +sha512"
 RESTRICT="binchecks"
 
