@@ -1,6 +1,10 @@
 # ChangeLog for sys-process/fcron
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/ChangeLog,v 1.72 2010/03/16 15:21:12 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/ChangeLog,v 1.73 2010/03/18 16:35:30 fauli Exp $
+
+  18 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
+  fcron-3.0.5-r2.ebuild:
+  stable x86, security bug 308075
 
 *fcron-3.0.5-r2 (16 Mar 2010)
 
