@@ -1,6 +1,10 @@
 # ChangeLog for sys-auth/pambase
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.79 2010/03/10 00:37:55 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.80 2010/03/18 16:33:52 fauli Exp $
+
+  18 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
+  pambase-20100310.ebuild:
+  stable x86, security bug 308075
 
 *pambase-20100310 (10 Mar 2010)
 
